# CEIA-ML-TPFINAL

./: README.md  TP1.ipynb  TP1_EDA.ipynb  TP1_LogisticRegression.ipynb  TP1_Models_Ensamble.ipynb  TP1_Models_KNN.ipynb  TP1_Models_SVM.ipynb  TP1_Models_Trees.ipynb  TP1_PCA.ipynb  pipeline_scaler_pca.joblib  pyproject.toml
output/: burnout_X_test.csv  burnout_X_test_PCA.csv  burnout_X_test_before_scale.csv  burnout_X_train.csv  burnout_X_train_PCA.csv  burnout_X_train_before_scale.csv  burnout_y_test.csv  burnout_y_train.csv
