[tool.poetry]
name = "ceia-ml-tpfinal"
version = "0.1.0"
description = "Machine Learning Final Project"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.0,<3.12.0"
numpy = "^1.26.4"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
jupyter = "^1.0.0"
ipykernel = "^6.29.3"
missingno = "^0.5.2"
pyampute = "^0.0.3"
statsmodels = "^0.14.1"
scikit-learn = "^1.4.2"
imbalanced-learn = "^0.12.0"
scipy = "^1.15.3"
imblearn = "^0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
